<?xml version="1.0"?>
<package format="2">
  <name>bringup_multi</name>
  <version>0.0.0</version>
  <description>Bring up multi vehicle</description>

  <maintainer email="sunggoo@etri.re.kr">Sunggoo Jung</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>capability_scout</exec_depend>

</package>
